--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,8 @@ jobs:
         python-version: [3.8, 3.9]
 
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout to directory
+      uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
