--- a/.github/workflows/container-workflow.yml
+++ b/.github/workflows/container-workflow.yml
@@ -6,9 +6,17 @@ on:
 jobs:
   build:
     strategy:
+    fail-fast: false
+    max-parallel: 3
       matrix:
         os: [ubuntu-latest, ubuntu-20.04, windows-latest]
         images: [hello-world, alpine]
+        exclude:
+          - images: alpine
+            os: windows-latest
+        include:
+          - images: amd64/alpine
+            os: ubuntu-latest
     runs-on: ${{ matrix.os }}
     steps:
       - name: echo Docker details
