--- a/.github/workflows/push-expressions.yml
+++ b/.github/workflows/push-expressions.yml
@@ -4,25 +4,22 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main:
-      - '!feature/*':
+      - main
+      - '!feature/*'
 
   pull_request:
     branches:
-      - main:
+      - main
     types:
       - opened
       - closed
     paths_ignore:
       - README.md
-
-
-
 jobs:
   hello:
   runs-on: ubuntu-latest
 
   steps:
-    - run: echo this workflow is executed for event type - ${{ gitub.event_name }}
+    - run: echo "this workflow is executed for event type - ${{ gitub.event_name }}"
    
       
